tests/parser/bad/cmodule-contract-cid-lparen-id-colon-comma-with.scilla
scilla_version 0

contract Nothing
( something : Uint128, with
